--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.3",
+    "@ai-sdk/google": "^1.2.8",
     "@ai-sdk/openai": "^1.3.5",
     "@ai-sdk/xai": "^1.2.4",
     "@nestjs/axios": "^4.0.0",
@@ -32,9 +33,11 @@
     "ai": "^4.2.9",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
+    "class-validator": "^0.14.1",
     "node-html-markdown": "^1.3.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
