--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.3",
     "@ai-sdk/google": "^1.2.8",
+    "@ai-sdk/groq": "^1.2.7",
     "@ai-sdk/openai": "^1.3.5",
     "@ai-sdk/xai": "^1.2.4",
     "@nestjs/axios": "^4.0.0",
