--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/swagger": "^11.1.0",
+    "@nestjs/websockets": "^11.1.0",
     "ai": "^4.2.9",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
@@ -38,6 +40,7 @@
     "node-html-markdown": "^1.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
