--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/swagger": "^11.1.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.0",
     "ai": "^4.2.9",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "class-validator": "^0.14.1",
     "node-html-markdown": "^1.3.0",
+    "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "typeorm": "^0.3.22",
     "zod": "^3.24.2"
   },
   "devDependencies": {
