:sparkles: feat: add Github module for fetching repo clones and traffic views

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ DB_PORT="<DB_PORT>"
 DB_USERNAME="<DB_USERNAME>"
 DB_PASSWORD="<DB_USERNAME>"
 DB_NAME="<DB_NAME>"
+
+# GitHub personal access token
+GITHUB_TOKEN="<GITHUB_TOKEN>"
