:sparkles: feat: add text-to-speech functionality to GoogleService and corresponding API endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Google
+ace-sight-407911-4aafb1aa3b21.json
