--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ai-sdk/groq": "^1.2.7",
     "@ai-sdk/openai": "^1.3.16",
     "@ai-sdk/xai": "^1.2.15",
+    "@google-cloud/text-to-speech": "^6.1.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
