--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.3",
+    "@ai-sdk/deepseek": "^0.2.14",
     "@ai-sdk/google": "^1.2.8",
     "@ai-sdk/groq": "^1.2.7",
     "@ai-sdk/openai": "^1.3.16",
