--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^11.1.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "ai": "^4.2.9",
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
