--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "tiktoken": "^1.0.21",
     "typeorm": "^0.3.22",
     "zod": "^3.24.2"
   },
